# Emu68-tools

./: CMakeLists.txt  extrom.lds
.github/workflows/: cmake.yml  nightly.yml
68040.library/: CMakeLists.txt  ldscript.lds
BinaryContribs/: CMakeLists.txt
Buddhabrot/: CMakeLists.txt
Buddhabrot/src/: main.c  work.h  worker.c
Emu68rom/: CMakeLists.txt  ldscript.lds
Emu68rom/src/: init.c  main.c
EmuControl/: CMakeLists.txt
EmuControl/src/: main.c  presets.c  presets.h
SmallPT/: CMakeLists.txt
VC4Tweak/: CMakeLists.txt
VC4Tweak/src/: main.c
VideoCore.card/: CMakeLists.txt
VideoCore.card/src/: emu68-vc4.h  main.c  mbox.c  mbox.h  messages.h  support.c  unicam.c  unicam.h  vc4-regs-unicam.h  vc4.c  vc4.h  vc6.c  vc6.h  vpu.c
devicetree.resource/: CMakeLists.txt  ldscript.lds
devicetree.resource/src/: devicetree.h
emmc.device/: CMakeLists.txt  ldscript.lds
emmc.device/src/: emmc.c  emmc.h  init.c  unittask.c
gic.resource/: CMakeLists.txt  ldscript.lds
gic.resource/include/clib/: gic_protos.h
gic.resource/include/inline/: gic.h
gic.resource/include/pragmas/: gic_pragmas.h
gic.resource/include/proto/: gic.h
gic.resource/include/resources/: gic.h
gic.resource/sfd/: gic_lib.sfd
gic.resource/src/: addintserver.c  gic.h  init.c  main.c  remintserver.c
mailbox.resource/: CMakeLists.txt  ldscript.lds
mailbox.resource/include/clib/: mailbox_protos.h
mailbox.resource/include/inline/: mailbox.h
mailbox.resource/include/pragmas/: mailbox_pragmas.h
mailbox.resource/include/proto/: mailbox.h
mailbox.resource/sfd/: mailbox_lib.sfd
mailbox.resource/src/: init.c  mailbox.h  main.c
network/: CMakeLists.txt
network/WiFiManager/: CMakeLists.txt
network/WiFiManager/include/: config.h  wifimanager.h
network/WiFiManager/include/tinystd/: allocator  list  string  string_view  vector
network/WiFiManager/src/: config.cc  main.cc  memory.cc  start.cc  string.cc
network/sana2/: CMakeLists.txt
network/sana2/include/devices/: sana2.h  sana2specialstats.h
network/wifipi.device/: CMakeLists.txt
network/wifipi.device/src/: device.c  packet.c  unit.c  wifipi.h
sdcard.device/: CMakeLists.txt  ldscript.lds
sdcard.device/src/: unit_task.c
unicam.resource/: CMakeLists.txt  ldscript.lds
unicam.resource/include/clib/: unicam_protos.h
unicam.resource/include/inline/: unicam.h
unicam.resource/include/pragmas/: unicam_pragmas.h
unicam.resource/include/proto/: unicam.h
unicam.resource/sfd/: unicam_lib.sfd
unicam.resource/src/: getsize.c  init.c  mbox.c  mbox.h  unicam.h  videocore.c
uuid.library/: CMakeLists.txt
uuid.library/src/: uuid_private.h
wifipi.device/: CMakeLists.txt
wifipi.device/src/: init.c  sdio.c  wifipi.h
